--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <input type="text" placeholder="Tìm kiếm sản phẩm..." class="header__search-input-field">
                             <i class="fa-solid fa-magnifying-glass header__search-input-icon"></i>
                         </div>
-                        <div class="header__search-contact-wrap hide-on-tablet hide-on-mobile">
+                        <div class="header__search-contact-wrap hide-on-mobile-tablet">
                             <div class="header__search-contact-phone">
                                 <img src="./assets/img/call.png" alt="" class="header__search-contact-img">
                             </div>
@@ -65,7 +65,7 @@
 
             </div>
         </header>
-        <nav class="header__nav hide-on-tablet hide-on-mobile ">
+        <nav class="header__nav hide-on-mobile-tablet ">
             <div class="grid wide">
                 <div class="header__nav-wrap row">
                     <div class="header__nav-menu-title">
@@ -169,38 +169,38 @@
         <div class="nav__category">
             <div class="grid wide">
                 <div class="row">
-                    <div class="nav__category-item  col-xl-1-5 m-2">
+                    <div class="nav__category-item  col-xl-1-5 m-2 c-2">
                         <img src="./assets/img/laptop.jpg" alt="" class="nav__category-item-img ">
-                        <p class="nav__category-item-title">Laptop</p>
+                        <a href="product.html" class="nav__category-item-title">Laptop</a>
                     </div>
-                    <div class="nav__category-item  col-xl-1-5 m-2">
+                    <div class="nav__category-item  col-xl-1-5 m-2 c-2">
                         <img src="./assets/img/redmi.jpg" alt="" class="nav__category-item-img ">
-                        <p class="nav__category-item-title">Phone</p>
+                        <a href="product.html" class="nav__category-item-title">Phone</a>
                     </div>
-                    <div class="nav__category-item  col-xl-1-5  hide-on-tablet">
+                    <div class="nav__category-item  col-xl-1-5  hide-on-mobile-tablet">
                         <img src="./assets/img/ipad.jpg" alt="" class="nav__category-item-img ">
-                        <p class="nav__category-item-title">Máy tính bảng</p>
+                        <a href="product.html" class="nav__category-item-title">Máy tính bảng</a>
                     </div>
-                    <div class="nav__category-item  col-xl-1-5 m-2">
+                    <div class="nav__category-item  col-xl-1-5 m-2 c-2">
                         <img src="./assets/img/dongho.jpg" alt="" class="nav__category-item-img ">
-                        <p class="nav__category-item-title">Smartwatch</p>
+                        <a href="product.html" class="nav__category-item-title">Smartwatch</a>
                     </div>
-                    <div class="nav__category-item  col-xl-1-5 m-2">
+                    <div class="nav__category-item  col-xl-1-5 m-2 c-2">
                         <img src="./assets/img/card.jpg" alt="" class="nav__category-item-img ">
-                        <p class="nav__category-item-title">Linh kiện</p>
+                        <a href="product.html" class="nav__category-item-title">Linh kiện</a>
                     </div>
-                    <div class="nav__category-item  col-xl-1-5 hide-on-tablet">
+                    <div class="nav__category-item  col-xl-1-5 hide-on-mobile-tablet">
                         <img src="./assets/img/phukien.jpg" alt="" class="nav__category-item-img ">
-                        <p class="nav__category-item-title">Phụ Kiện</p>
+                        <a href="product.html" class="nav__category-item-title">Phụ Kiện</a>
 
                     </div>
-                    <div class="nav__category-item  col-xl-1-5 m-2">
-                        <img src="./assets/img/tabpen.jpg" alt="" class="nav__category-item-img ">
-                        <p class="nav__category-item-title">Đồ dùng</p>
+                    <div class="nav__category-item  col-xl-1-5 m-2 hide-on-mobile-tablet">
+                        <img src="./assets/img/tabpen.jpg" alt="" class="nav__category-item-img  ">
+                        <a href="product.html" class="nav__category-item-title">Đồ dùng</a>
                     </div>
-                    <div class="nav__category-item  col-xl-1-5 hide-on-tablet">
+                    <div class="nav__category-item  col-xl-1-5 m-2 c-2">
                         <img src="./assets/img/pc.jpg" alt="" class="nav__category-item-img">
-                        <p class="nav__category-item-title">PC</p>
+                        <a href="product.html" class="nav__category-item-title">PC</a>
                     </div>
                 </div>
             </div>
@@ -924,7 +924,7 @@
                                     href="">Mobi Shop</a> Cung cấp bởi <a class="copyright__author-link" href="">VKU
                                 </a> </span>
                         </div>
-                        <div class="l-6 hide-on-tablet hide-on-mobile">
+                        <div class="l-6 hide-on-mobile-tablet">
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
                                     <a class="footer__nav-item--link" href="index.html">Trang Chủ</a>
