--- a/policy.html
+++ b/policy.html
@@ -9,45 +9,46 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./assets/font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
+
     <title>MobiShop-Policy</title>
 </head>
 
 <body>
     <div class="root">
         <header class="header">
-            <div class="grid">
-
+            <div class="grid wide">
                 <div class="row">
-                    <div class="col-xl-3 header__logo-wrap">
-                        <a class="header__logo-link">
+                    <div class="header__logo-wrap l-3 m-4 c-6">
+                        <a href="index.html" class="header__logo-link">
                             <img src="./assets/img/new-logo.png" alt="" class="header__logo-img">
                         </a>
                     </div>
-                    <div class="header__search col-xl-7">
+                    <div class="header__search l-7 m-6 c-12">
                         <div class="header__search-input-wrap">
                             <input type="text" placeholder="Tìm kiếm sản phẩm..." class="header__search-input-field">
                             <i class="fa-solid fa-magnifying-glass header__search-input-icon"></i>
                         </div>
-                        <div class="header__search-contact-wrap">
+                        <div class="header__search-contact-wrap hide-on-mobile-tablet">
                             <div class="header__search-contact-phone">
                                 <img src="./assets/img/call.png" alt="" class="header__search-contact-img">
                             </div>
-                            <div class="header__search-contact-info">
+                            <div class="header__search-contact-info ">
                                 <span class="header__search-contact-title">Tổng đài hỗ trợ/ Hotline</span>
                                 <h4 class="header__contact-phone">0388 529 096</h4>
                             </div>
                         </div>
                     </div>
-                    <div class="header__user-info col-xl-2">
+                    <div class="header__user-info l-2 m-2 c-6">
                         <div class="header__user-wrap">
-                            <img src="./assets/img/user.png" alt="">
-                            <div class="user__info-wrap">
+                            <img src="./assets/img/user.png" alt="" class="hide-on-tablet ">
+                            <div class="user__info-wrap hide-on-tablet ">
                                 <span class="header__user-title">Xin chào!</span>
                                 <h4 class="header__user-logout">Đăng Xuất</h4>
                             </div>
@@ -56,8 +57,7 @@
                                 <span class="header__cart-notice">0</span>
                                 <div class="header__cart-notice--cart">
                                     <img src="./assets/img/shopping-bag.png" alt="">
-                                    <p class="header__cart-notice-des">Không có sản phẩm nào trong giỏ hàng của bạn
-                                    </p>
+                                    <p class="header__cart-notice-des">Không có sản phẩm nào trong giỏ hàng của bạn</p>
                                 </div>
                             </div>
                         </div>
@@ -66,9 +66,9 @@
 
             </div>
         </header>
-        <nav class="header__nav">
-            <div class="grid">
-                <div class="header__nav-wrap d-flex">
+        <nav class="header__nav hide-on-mobile-tablet ">
+            <div class="grid wide">
+                <div class="header__nav-wrap row">
                     <div class="header__nav-menu-title">
                         <span class="nav__menu-title">Danh mục sản phẩm</span>
                         <ul class="header___menu-title-list">
@@ -118,11 +118,12 @@
                     </div>
                     <ul class="header__nav-list">
                         <li class="header__nav-item">
-                            <a href="index.html" class="header__nav-item-link">Trang chủ</a>
+                            <a href="index.html" class="header__nav-item-link ">Trang
+                                chủ</a>
                         </li>
                         <!-- <li class="header__nav-item">
-                                <a href="" class="header__nav-item-link">Giới thiệu</a>
-                            </li> -->
+                            <a href="" class="header__nav-item-link">Giới thiệu</a>
+                        </li> -->
                         <li class="header__nav-item">
                             <a href="product.html" class="header__nav-item-link">Sản Phẩm</a>
                             <!-- <i class="fa-solid fa-caret-down header__nav-item-icon"></i> -->
@@ -131,24 +132,22 @@
                             <a href="knowlegde.html" class="header__nav-item-link">Kiến thức & Phần mềm</a>
                         </li>
                         <li class="header__nav-item">
-                            <a href="policy.html" class="header__nav-item-link header__nav-item-link-active">Chính
-                                sách bảo hành</a>
+                            <a href="policy.html" class="header__nav-item-link header__nav-item-link-active">Chính sách bảo hành</a>
                         </li>
                         <!-- <li class="header__nav-item">
-                                <a href="" class="header__nav-item-link">Tuyển dụng</a>
-                            </li> -->
+                            <a href="" class="header__nav-item-link">Tuyển dụng</a>
+                        </li> -->
                         <li class="header__nav-item">
                             <a href="contact.html" class="header__nav-item-link">Liên hệ</a>
                         </li>
                     </ul>
                 </div>
-
             </div>
         </nav>
-        <div class="grid">
+        <div class="grid wide">
             <div class="policy__header">
                 <div class="policy__header-container">
-                    <div class="policy__header-row row">
+                    <div class="policy__header-row">
                         <ul class="policy__header-list">
                             <li class="policy__header-home">
                                 <a href="index.html">
@@ -171,7 +170,7 @@
                                 <h1 class="policy__page-heading">CHÍNH SÁCH BẢO HÀNH</h1>
                             </div>
                             <div class="policy__page-content">
-                                <p>
+                                <p class="policy__page-content-title">
                                     <strong>A. Địa điểm bảo hành:</strong>
                                 </p>
                                 <p>
@@ -202,7 +201,7 @@
                                     - Sau khi bảo hành xong, chúng tôi sẽ liên hệ gửi lại sản phẩm về địa chỉ mà quý
                                     khách cung cấp. Chi phí vận chuyển chiều gửi lại do MobiShop thanh toán
                                 </p>
-                                <p>
+                                <p class="policy__page-content-title">
                                     <strong>B. Những trường hợp sau không được bảo hành:</strong>
                                 </p>
                                 <p>
@@ -230,7 +229,7 @@
                                 <p>
                                     - Khách hàng tự ý can thiệp vào firmware của sản phẩm.
                                 </p>
-                                <p>
+                                <p class="policy__page-content-title">
                                     <strong>C. Các trường hợp khác sẽ được bảo hành theo tiêu chuẩn của nhà sản
                                         xuất.</strong>
                                 </p>
@@ -249,9 +248,9 @@
             </div>
         </div>
         <footer class="footer">
-            <div class="grid">
+            <div class="grid wide">
                 <div class="row">
-                    <div class="col-xl-4">
+                    <div class="l-4 m-4 c-12 tmp-4">
                         <div class="footer__title-menu">
                             <span>MOBI SHOP</span>
                         </div>
@@ -263,7 +262,7 @@
                                     href="">hand.22itb061@vku.udn.vn</a></li>
                         </ul>
                     </div>
-                    <div class="col-xl-3">
+                    <div class="l-3 m-4 c-12 tmp-4">
                         <div class="footer__title-menu">
                             <span>THEO DÕI CHÚNG TÔI</span>
                         </div>
@@ -286,7 +285,7 @@
 
                         </ul>
                     </div>
-                    <div class="col-xl-5">
+                    <div class="l-5 m-4 c-12 tmp-4">
                         <div class="footer__title-menu">
                             <span>NHẬN TIN KHUYẾN MÃI</span>
                         </div>
@@ -313,14 +312,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer__copyright">
+                <div class="footer__copyright tmp-4 ">
                     <div class="row">
-                        <div class="col-xl-6">
+                        <div class="l-6">
                             <span class="copyright__author"> Bản quyền thuộc về <a class="copyright__author-link"
                                     href="">Mobi Shop</a> Cung cấp bởi <a class="copyright__author-link" href="">VKU
                                 </a> </span>
                         </div>
-                        <div class="col-xl-6">
+                        <div class="l-6 hide-on-mobile-tablet">
                             <ul class="footer__nav-list">
                                 <li class="footer__nav-item">
                                     <a class="footer__nav-item--link" href="index.html">Trang Chủ</a>
@@ -341,7 +340,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </footer>
 </body>
